# mini-pic

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: README.md
examples/default/: system.param
examples/one_stream/course/: system.param
examples/one_stream/small/: system.param
src/: FESolver.cpp  FESolver.h  IO.cpp  IO.h  element.cpp  element.h  fesolver.h  maths.cpp  maths.h  mesh.cpp  mesh.h  meshes.cpp  meshes.h  mini-pic.cpp  node.cpp  node.h  parameters.cpp  parameters.h  particle.cpp  particle.h  particles.cpp  particles.h  simulation.cpp  simulation.h  species.cpp  species.h  trace.cpp  trace.h  volume.h
